# chess-game

./: CMakeLists.txt  README.md
scripts/: build.sh  install.sh  run.sh
src/: chess-game.pro  main.cpp
src/board/: board.cpp  board.h
src/board/pieces/: BasePiece.cpp  BasePiece.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/controller/: controller.cpp  controller.h
src/pieces/: base_piece.h  bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
src/view/: board_widget.cpp  board_widget.h  chess_window.cpp  chess_window.h
